--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600&family=Palette+Mosaic&family=Press+Start+2P&family=Rock+3D&family=Smokum&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: #61dafb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+table {
+  margin: auto;
+  width: 360px;
+  border-collapse: collapse;
+  position: relative;
+}
+.table-wrapper {
+  max-height: 242px;
+  overflow-y:scroll;
+
+}
+.table-wrapper {
+  margin: auto;
+  width: fit-content;
+  border: 10px solid transparent;
+  border-image: linear-gradient(128deg, violet, indigo, blue, green, yellow, orange, red);
+border-image-slice: 1;
+}
+td, th {
+  border: 1px solid black;
+}
+tr {
+  width: 100%;
+}
+th {
+  position: sticky;
+  top: 0;
+  color: black;
+  background: #61dafb;
+}
+td,th {
+  text-align: left;
+  width: auto;
+  padding: 5px 10px;
+}
+
+td:first-child, th:first-child {
+  width: 65px;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-family: 'Press Start 2P', cursive;
+  margin: 50px auto 20px;
+background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+}
+h1, h2 {
+color: transparent;
+background-clip: text;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  font-family: 'Rock 3D', cursive;
+  font-size: 30px;
+  margin: 30px auto 15px;
+  background-image: linear-gradient(189deg, violet, indigo, blue, green, yellow, orange, red);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 15px;
+  color: black;
+  font-size: 15px;
+  border: 3px solid transparent;
+  border-image: linear-gradient(-128deg, violet, indigo, blue, green, yellow, orange, red);
+border-image-slice: 1;
 }
