--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600&family=Palette+Mosaic&family=Press+Start+2P&family=Rock+3D&family=Smokum&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600&family=Palette+Mosaic&family=Press+Start+2P&family=Rock+3D&family=Smokum&display=swap");
 
 * {
   margin: 0;
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: #61dafb;
+  background: black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,21 +17,20 @@ table {
   width: 360px;
   border-collapse: collapse;
   position: relative;
+  color: floralwhite;
 }
 .table-wrapper {
   max-height: 242px;
-  overflow-y:scroll;
-
-}
-.table-wrapper {
+  overflow-y: scroll;
   margin: auto;
   width: fit-content;
   border: 10px solid transparent;
   border-image: linear-gradient(128deg, violet, indigo, blue, green, yellow, orange, red);
-border-image-slice: 1;
+  border-image-slice: 1;
 }
-td, th {
-  border: 1px solid black;
+td,
+th {
+  border: 1px solid #61dafb;
 }
 tr {
   width: 100%;
@@ -42,13 +41,15 @@ th {
   color: black;
   background: #61dafb;
 }
-td,th {
+td,
+th {
   text-align: left;
   width: auto;
   padding: 5px 10px;
 }
 
-td:first-child, th:first-child {
+td:first-child,
+th:first-child {
   width: 65px;
 }
 
@@ -57,20 +58,23 @@ td:first-child, th:first-child {
 }
 
 h1 {
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
   margin: 50px auto 20px;
-background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
 }
-h1, h2 {
-color: transparent;
-background-clip: text;
+h1,
+h2 {
+  color: transparent;
+  background-clip: text;
 }
 
 h2 {
-  font-family: 'Rock 3D', cursive;
-  font-size: 30px;
+  font-family: "Orbitron", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.9px;
+  font-size: 35px;
   margin: 30px auto 15px;
-  background-image: linear-gradient(189deg, violet, indigo, blue, green, yellow, orange, red);
+  background-image: radial-gradient(circle, rgba(240, 255, 0, 1) 18%, rgba(112, 246, 51, 1) 34%, rgba(252, 70, 107, 1) 64%);
 }
 
 button {
@@ -80,5 +84,5 @@ button {
   font-size: 15px;
   border: 3px solid transparent;
   border-image: linear-gradient(-128deg, violet, indigo, blue, green, yellow, orange, red);
-border-image-slice: 1;
+  border-image-slice: 1;
 }
